--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ __pycache__/
 env/
 venv/
 ENV/
+env.bak/
+venv.bak/
 build/
 develop-eggs/
 dist/
@@ -19,17 +21,27 @@ parts/
 sdist/
 var/
 wheels/
+pip-wheel-metadata/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+MANIFEST
 
 # Jupyter Notebook
 .ipynb_checkpoints
 *.ipynb_checkpoints/
+*/.ipynb_checkpoints/*
+.virtual_documents/
+
+# IPython
+profile_default/
+ipython_config.py
 
 # Environment variables
 .env
 .env.local
+.env.*.local
 
 # IDE
 .vscode/
@@ -37,27 +49,91 @@ wheels/
 *.swp
 *.swo
 *~
+.project
+.pydevproject
+.settings/
 
 # Data files (important for finance projects!)
 *.csv
 *.xlsx
+*.xls
 *.parquet
+*.feather
+*.hdf5
 data/
 datasets/
 !example_data.csv  # Keep example files with !
+!**/example*.csv
+!**/sample*.csv
 
-# Model files
+# Model files and outputs
 *.pkl
+*.pickle
+*.joblib
 *.h5
+*.hdf5
 *.pt
+*.pth
+*.onnx
+*.pb
 models/
 checkpoints/
+saved_models/
+outputs/
+results/
+
+# Logs
+*.log
+logs/
+*.log.*
 
 # OS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
 # Testing
 .pytest_cache/
 .coverage
+.coverage.*
 htmlcov/
+.tox/
+.nox/
+coverage.xml
+*.cover
+.hypothesis/
+.cache
+
+# Documentation
+docs/_build/
+site/
+.doctrees/
+
+# Profiling
+*.prof
+*.lprof
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# pytype static type analyzer
+.pytype/
+
+# Cython debug symbols
+cython_debug/
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*.swp
+*~.nib
